--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   text-decoration: none;
-  font-size: 14px;
+  // font-size: 14px;
 }
 /* Селектор для стилизации самого скроллбара */
 ::-webkit-scrollbar {
