--- a/src/components/Statistics/Tabs/Search/Search.scss
+++ b/src/components/Statistics/Tabs/Search/Search.scss
@@ -4,7 +4,7 @@
         display: flex;
         align-items: end;
         gap: 10px;
-        padding: 5px 0 20px;
+        padding: 5px 0 10px 5px;
     }
     &__container {
         max-width: 1300px;
@@ -14,7 +14,7 @@
         color: #4caf50;
         font-weight: 700;
         display: flex;
-        padding: 0 0 20px;
+        padding: 0 0 5px;
     }
     &__textField > label {
         left: 10px !important;
