--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+:root {
+  --font-size: 15px; /* Базовый размер шрифта */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   text-decoration: none;
-  // font-size: 14px;
+  font-size: var(--font-size)
 }
 /* Селектор для стилизации самого скроллбара */
 ::-webkit-scrollbar {
