add: width fields

--- a/src/components/Statistics/Statistics.scss
+++ b/src/components/Statistics/Statistics.scss
@@ -34,7 +34,7 @@
   }
   &__headers {
     th {
-      padding: 0px !important;
+      padding:3px 5px !important;
       white-space: nowrap;
     }
   }
