--- a/src/components/Statistics/Statistics.scss
+++ b/src/components/Statistics/Statistics.scss
@@ -36,7 +36,7 @@
     th {
       padding: 3px 5px !important;
       white-space: nowrap;
-      border: 1px dashed rgb(148 148 148);
+      border: 1px dashed #1976d249;
       border-right: 0;
     }
   }
