--- a/src/components/Statistics/Tabs/Tabs.scss
+++ b/src/components/Statistics/Tabs/Tabs.scss
@@ -1,5 +1,5 @@
 .tabs {
-    margin-top: 100px;
+    margin-top: 0;
     &__box {
         border: 1px solid rgba(0, 0, 0, 0.125);
         border-radius: 5px;
