--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   text-decoration: none;
-  font-size: var(--font-size)
+  font-size: var(--font-size);
 }
 /* Селектор для стилизации самого скроллбара */
 ::-webkit-scrollbar {
